# KKADBlow

./: .gitignore  Interop.cs  KKADBlow - Backup.csproj  KKADBlow.csproj  KKADBlow.old.csproj  KKADBlow.sln  KKADBlow.sln.DotSettings  Program.cs  README.md  Tray.Designer.cs  Tray.cs  Tray.resx  Win32Interop.cs  WindowsCommandParams.cs  kakaoADFinder.csproj  kakaoADFinder.sln
.github/ISSUE_TEMPLATE/: ------.md  -----.md
Properties/: AssemblyInfo.cs
Properties/PublishProfiles/: FolderProfile.pubxml  FolderProfile_selfcontained.pubxml
net8/: KKADBlow.csproj  KKADBlow.sln  KKADBlow.sln.DotSettings  Program.cs  Tray.Designer.cs  Tray.cs  Tray.resx
net8/Properties/PublishProfiles/: FolderProfile.pubxml  FolderProfile_selfcontained.pubxml
rust/: Cargo.toml  build.rs
rust/res/: resource.lib  resource.rc
rust/src/: err.rs  func.rs  lib.rs  main.rs  structs.rs
rust/src/gui/: mod.rs
rust/src/gui/w32/: extern_func.rs  mod.rs  string_extensions.rs  structs.rs  traits.rs  ui.rs
rust/src/memory_lock/: mod.rs  mutex.rs  rw_read.rs  rw_write.rs
