[package]
name = "kkadblow_rs"
version = "0.1.1"
edition = "2021"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4.2"

[target.'cfg(windows)'.package.metadata.embed_resource]
OriginalFileName = "kkadblow.exe"
name = "kkadblow"
path = "src/main.rs"

[profile.release]
rustc-link-arg = "-Clink-args=/SUBSYSTEM:WINDOWS"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_System_SystemServices", "Win32_System_Threading"]
[dependencies]
chrono = "0.4.38"